fixed legend & control overlap on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@ em {
 table {
     text-align: left;
     font-size: 12px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 td { 
@@ -142,6 +144,12 @@ input[type="checkbox" i] {
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 }
 
+.legend-size-circles {
+    padding-left:10px; 
+    padding-bottom: 5px; 
+    padding-top: 7px;
+}
+
 .legend-label {
     position: relative;
     bottom: 2px;
@@ -191,6 +199,18 @@ input[type="checkbox" i] {
  
 
 /* Mobile */ 
+
+@media (max-height: 480px) { 
+    table {
+        display: none;
+    }
+    #legend {
+        font-size: 0.9em;
+    }
+    .legend-size-circles {
+        padding-left: 5px;
+    }
+}
 
 @media (min-width: 500px) {
     #legend {
